# django-crispy-tableselect

./: .cruft.json  .editorconfig  .flake8  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  compile_translations.sh  manage.py  pyproject.toml  tox.ini  update_translations.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-test.yml  publish.yml  test.yml
sandbox/: admin.py  asgi.py  factories.py  fixtures.json  forms.py  models.py  settings.py  tables.py  urls.py  views.py  wsgi.py
sandbox/migrations/: 0001_initial.py
sandbox/static/: sandbox.css
sandbox/tasks/: admin.py  forms.py  models.py  tables.py  urls.py  views.py
sandbox/tasks/migrations/: 0001_initial.py
sandbox/templates/: base.html  index.html  task_bulk_complete_page.html  task_bulk_complete_wizard_page.html  task_table_page.html
scripts/: install_tox.sh
src/django_crispy_tableselect/: __init__.py  columns.py  helpers.py  layout.py  mixins.py
src/django_crispy_tableselect/locale/nl/LC_MESSAGES/: django.po
src/django_crispy_tableselect/static/django_crispy_tableselect/: tableselect.js
src/django_crispy_tableselect/static/django_tableselect/: tableselect.js
src/django_crispy_tableselect/templates/django_crispy_tableselect/: checkbox_column_header.html  narrator.html
src/techonomy/django/django_tableselect/: __init__.py  columns.py  helpers.py  layout.py  urls.py  views.py  widgets.py
src/techonomy/django/django_tableselect/static/django_tableselect/: tableselect.js
src/techonomy/django/django_tableselect/templates/django_tableselect/: bulk_checkbox.html  checkbox_column_header.html  narrator.html  select_all_checkbox.html
tests/: conftest.py  settings.py
tests/functional/: test_column_html.py  test_views.py
tests/testapp/: models.py  tables.py
tests/testapp/migrations/: 0001_initial.py
tests/unit/: test_columns.py  test_helper.py  test_layout.py
