[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-crispy-tableselect"
dynamic = ["version"]
readme = "README.md"
description = "Crispy layout object for selecting rows in a table"
requires-python = ">=3.10"
license = "MIT"
keywords = ["django", "crispy-forms"]
authors = [{ name = "Storm B. Heg", email = "storm@stormbase.digital" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Framework :: Django",
  "Framework :: Django :: 5.2",
  "Framework :: Django :: 6.0",
]
dependencies = [
  "django>=5.2",
  "django-tables2>=2.4",
  "django-crispy-forms>=2.0"
]

[project.urls]
# TODO: documentation link
# Documentation = "https://github.com/Stormbase/django-crispy-tableselect/"
Changelog = "https://github.com/Stormbase/django-crispy-tableselect/blob/main/CHANGELOG.md"
Issues = "https://github.com/Stormbase/django-crispy-tableselect/issues"
Source = "https://github.com/Stormbase/django-crispy-tableselect"

[tool.hatch.version]
path = "src/django_crispy_tableselect/__init__.py"

[tool.hatch.build.targets.wheel]
artifacts = [
  # Include built static files that are gitignored and thus not included by default
  "src/django_crispy_tableselect/static/django_crispy_tableselect/*",
  # Include compiled translations that are gitignored and thus not included by default
  "src/django_crispy_tableselect/locale/*/LC_MESSAGES/*.mo",
]

[tool.hatch.envs.default]
dependencies = [
  "django-debug-toolbar>6,<7",
  "dj-database-url>=2.1.0,<3",
  "psycopg>=3.0,<4",
  "crispy-bootstrap5>=2024.2",
  "factory-boy>=3.2,<4",
  # To test functionality with a strict Content Security Policy
  "django-csp>=3.8",
  # To test behaviour as part or a multi-step form
  "django-formtools>=2.4",

  # Update as necessary, prevent sudden breakage
  "tox>=4.14,<5",
  "coverage>=7.2,<8",
  "pytest>9,<10",
  "pytest-django>4.5,<5",
  "pytest-env>=0.6.2,<1",
  "pytest-randomly>=3.15,<4",
  "beautifulsoup4>=4.12,<5",
]

[tool.hatch.envs.hatch-static-analysis]
dependencies = [
  # Update as necessary, prevent sudden breakage
  "ruff>0.15,<0.16",
]

[tool.ruff]
target-version = "py310" # minimum target version

[tool.ruff.lint]
# E501: Line too long
ignore = ["E501"]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "T20", # flake8-print
    "BLE", # flake8-blind-except
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.coverage.run]
source_pkgs = ["django_crispy_tableselect", "tests"]
branch = true
parallel = true
omit = []

[tool.pytest.ini_options]
pythonpath = "sandbox"
DJANGO_SETTINGS_MODULE = "settings"
testpaths = "tests/"
addopts = "--reuse-db"

[tool.coverage.report]
show_missing = true
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc.)?abstractmethod",

    # Nor complain about type checking
    "if TYPE_CHECKING:",
]
